--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts4-save-data-reader",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": { "type": "git", "url": "https://github.com/gametimedev/png2dds" },
+  "repository": { "type": "git", "url": "https://github.com/gametimedev/ts4-save-data-reader" },
   "keywords": ["save","sims"],
   "author": "GameTimeDev",
   "license": "GNU",
