Add direct output mode to SaveGameReader
Introduces '-d' and '-t' CLI options to SaveGameReader for direct output of specific savegame types to stdout or a file. Updates .gitignore and .npmignore to exclude 'data_old', refactors solution for x86 configs, and begins refactoring index.js for type validation and future direct access methods. Removes old SaveToJson binaries and adds new SaveGameReader binaries and dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -135,10 +135,12 @@ test.js
 /.vs/*
 /.vs
 
-SaveGameReader/bin
-SaveGameReader/bin/*
 /SaveGameReader/bin
 /SaveGameReader/bin/*
 SaveGameReader/obj
 SaveGameReader/obj/*
 SaveGameReader/bin/*
+/SaveGameReader/bin/*
+./SaveGameReader/bin/*
+
+data_old
