--- a/.gitignore
+++ b/.gitignore
@@ -135,12 +135,9 @@ test.js
 /.vs/*
 /.vs
 
-/SaveGameReader/bin
-/SaveGameReader/bin/*
-SaveGameReader/obj
-SaveGameReader/obj/*
-SaveGameReader/bin/*
-/SaveGameReader/bin/*
-./SaveGameReader/bin/*
+SaveGameReader/bin/
+SaveGameReader/obj/
 
 data_old
+
+
