--- a/SaveGameReader/Properties/launchSettings.json
+++ b/SaveGameReader/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SaveGameReader": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\fabis\\Desktop\\S4MM\\Save\\save.save\" -s"
+      "commandLineArgs": "\"C:\\Users\\fabis\\Desktop\\S4MM\\Save\\save.save\" -d save_slot "
     }
   }
 }
