--- a/SaveGameReader/SaveGameReader.csproj
+++ b/SaveGameReader/SaveGameReader.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="G:\User data\Documents\Sims Tools\Sims4Tools-0.6.0\s4pi\Interfaces\Interfaces.csproj" />
-    <ProjectReference Include="G:\User data\Documents\Sims Tools\Sims4Tools-0.6.0\s4pi\Package\Package.csproj" />
+    <ProjectReference Include="G:\User data\Documents\Sims Tools\Sims4Tools\s4pi\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="G:\User data\Documents\Sims Tools\Sims4Tools\s4pi\Package\Package.csproj" />
   </ItemGroup>
 
 </Project>
