Add test input C# files and update dev dependencies
Added multiple C# files under test/input_cs for testing purposes. Updated package.json to include protobufjs as a devDependency and incremented the version. Updated .npmignore to exclude the test directory from npm packages.

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     },
     "author": "GameTimeDev",
     "license": "GNU",
-    "description": "Reads a Sims 4 save game file and outputs the data from the save game entry"
+    "description": "Reads a Sims 4 save game file and outputs the data from the save game entry",
+    "devDependencies": {
+        "protobufjs": "^8.0.0"
+    }
 }
